--- a/index.html
+++ b/index.html
@@ -3,11 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <title>Redirecting...</title>
-    <script>
-      window.location.href = "home.html";
-    </script>
+    <meta http-equiv="refresh" content="0; url=home.html" />
   </head>
   <body>
-    <p>Redirecting to <a href="home.html">home.html</a>...</p>
+    <p>If you are not redirected, <a href="home.html">click here</a>.</p>
   </body>
 </html>
