--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8" />
     <title>Redirecting...</title>
     <meta http-equiv="refresh" content="0; url=home.html" />
+    
+    <link href="css/styles.css" rel="stylesheet">
   </head>
   <body>
-    <p>If you are not redirected, <a href="home.html">click here</a>.</p>
+    <!-- <p>If you are not redirected, <a href="home.html">click here</a>.</p> -->
   </body>
 </html>
