--- a/ar.html
+++ b/ar.html
@@ -7,7 +7,7 @@
 <meta name="HandheldFriendly" content="false">
 <meta name="MobileOptimized" content="1280">
 
-  <title>AOG Anniversary 15</title>
+  <title>AR Project</title>
 
   <script src="https://aframe.io/releases/1.3.0/aframe.min.js"></script>
   <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
@@ -50,7 +50,7 @@
     loading-screen="enabled: false"
     vr-mode-ui="enabled: false">
 
-    <a-marker type="pattern" url="./Assets/pattern-aog-colour.patt" id="aogMarker" emitevents="true">
+    <a-marker type="pattern" url="./Assets/pattern-matcha.patt" id="aogMarker" emitevents="true">
       <a-image 
         src="Assets/radar.png" 
         position="0.7 0 0" 
