--- a/ar.html
+++ b/ar.html
@@ -68,9 +68,17 @@
       <a-image src="Assets/6.png" position="0 0.6 0" width="3.5" height="3.5" opacity="1" rotation="-90 0 0"></a-image>
       <a-image src="Assets/7.png" position="0 0.7 0" width="3.5" height="3.5" opacity="1" rotation="-90 0 0"></a-image>
       <a-image src="Assets/8.png" position="0 0.8 0" width="3.5" height="3.5" opacity="1" rotation="-90 0 0"></a-image>
-      <!-- <a-image src="Assets/9.png" position="0 0.9 0" width="3.5" height="3.5" opacity="1" rotation="-90 0 0"></a-image>
+      <a-image src="Assets/9.png" position="0 0.9 0" width="3.5" height="3.5" opacity="1" rotation="-90 0 0"></a-image>
       <a-image src="Assets/10.png" position="0 1 0" width="3.5" height="3.5" opacity="1" rotation="-90 0 0"></a-image>
-      <a-image src="Assets/11.png" position="0 1.1 0" width="3.5" height="3.5" opacity="1" rotation="-90 0 0"></a-image> -->
+      <a-image src="Assets/11.png" position="0 1.1 0" width="3.5" height="3.5" opacity="1" rotation="-90 0 0"></a-image>
+      <a-image src="Assets/12.png" position="0 1.2 0" width="3.5" height="3.5" opacity="1" rotation="-90 0 0"></a-image>
+      <a-image src="Assets/13.png" position="0 1.3 0" width="3.5" height="3.5" opacity="1" rotation="-90 0 0"></a-image>
+      <a-image src="Assets/14.png" position="0 1.4 0" width="3.5" height="3.5" opacity="1" rotation="-90 0 0"></a-image>
+      <a-image src="Assets/15.png" position="0 1.5 0" width="3.5" height="3.5" opacity="1" rotation="-90 0 0"></a-image>
+      <a-image src="Assets/16.png" position="0 1.6 0" width="3.5" height="3.5" opacity="1" rotation="-90 0 0"></a-image>
+      <a-image src="Assets/17.png" position="0 1.7 0" width="3.5" height="3.5" opacity="1" rotation="-90 0 0"></a-image>
+      <a-image src="Assets/18.png" position="0 1.8 0" width="3.5" height="3.5" opacity="1" rotation="-90 0 0"></a-image>
+      <a-image src="Assets/19.png" position="0 1.9 0" width="3.5" height="3.5" opacity="1" rotation="-90 0 0"></a-image>
     </a-marker>
 
     <!-- Camera entity -->
