--- a/home.html
+++ b/home.html
@@ -73,7 +73,7 @@
                 <h2 class="small-heading mb-5">Projects</h2>
                 <div class="projects-center">
                     <div class="row g-4">
-                        <div class="col-lg-11 mx-auto">
+                        <!-- <div class="col-lg-11 mx-auto">
                             <a href="" class="text-decoration-none">
                                 <div class="card project-card">
                                     <div class="card-body">
@@ -84,7 +84,7 @@
                                     </div>
                                 </div>
                             </a>
-                        </div>
+                        </div> -->
 
 
 
