--- a/realmOfShadow.html
+++ b/realmOfShadow.html
@@ -58,9 +58,9 @@
         <div class="row align-items-center">
 
 
-            <div class="computer-image mb-4">
+            <!-- <div class="computer-image mb-4">
                 <img src="vintage-computer.png" alt="Vintage computer displaying Realm of Shadow" class="img-fluid">
-            </div>
+            </div> -->
             <div class="challenge">
                 <p>Will you rise to the challenge<br>
                     and outwit the three masters<br>
