--- a/home.html
+++ b/home.html
@@ -73,19 +73,18 @@
                 <h2 class="small-heading mb-5">Projects</h2>
                 <div class="projects-center">
                     <div class="row g-4">
-                        <!-- <div class="col-lg-11 mx-auto">
+                        <div class="col-lg-11 mx-auto">
                             <a href="" class="text-decoration-none">
                                 <div class="card project-card">
                                     <div class="card-body">
                                         <div class="project-image mb-3">
-                                            <img src="" alt="">
+                                            <img src="img/AR_Project.png" alt="AR">
                                         </div>
-                                        <h3 class="project-title">Another one</h3>
+                                        <h3 class="project-title">AR Project</h3>
                                     </div>
                                 </div>
                             </a>
-                        </div> -->
-
+                        </div>
 
 
                         <!-- CosmoScape -->
