--- a/home.html
+++ b/home.html
@@ -74,7 +74,7 @@
                 <div class="projects-center">
                     <div class="row g-4">
                         <div class="col-lg-11 mx-auto">
-                            <a href="" class="text-decoration-none">
+                            <a href="arProject.html" class="text-decoration-none">
                                 <div class="card project-card">
                                     <div class="card-body">
                                         <div class="project-image mb-3">
