--- a/home.html
+++ b/home.html
@@ -73,6 +73,8 @@
                 <h2 class="small-heading mb-5">Projects</h2>
                 <div class="projects-center">
                     <div class="row g-4">
+
+                        <!-- AR Project -->
                         <div class="col-lg-11 mx-auto">
                             <a href="arProject.html" class="text-decoration-none">
                                 <div class="card project-card">
@@ -81,6 +83,20 @@
                                             <img src="img/AR_Project.png" alt="AR">
                                         </div>
                                         <h3 class="project-title">AR Project</h3>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+
+                        <!-- Audicia -->
+                        <div class="col-lg-11 mx-auto">
+                            <a href="audicia.html" class="text-decoration-none">
+                                <div class="card project-card">
+                                    <div class="card-body">
+                                        <div class="project-image mb-3">
+                                            <img src="img/Audicia.png" alt="Audicia">
+                                        </div>
+                                        <h3 class="project-title">Audicia</h3>
                                     </div>
                                 </div>
                             </a>
