--- a/assignment.html
+++ b/assignment.html
@@ -46,7 +46,7 @@
     <div class="container pt-5 pb-4">
         <div class="project-header">
             <h1>I'M SORRY</h1>
-            <p class="subtitle">There is <b>no password</b> for WIFI UC Staff here</p>
+            <p class="subtitle">There is nothing here</p>
         </div>
         
         <div class="year-info">
