--- a/assignment.html
+++ b/assignment.html
@@ -46,10 +46,11 @@
     <div class="container pt-5 pb-4">
         <div class="project-header">
             <h1>I'M SORRY</h1>
-            <p class="subtitle">There is nothing here</p>
+            <p class="subtitleAssignment">There is nothing here</p>
         </div>
         
-        <div class="year-info">
+        <div class="year-infoA">
+            <img src="img/sorry.jpg" alt="sorry" style="width:300px;">
             <p>Thank you for clicking. *this is for an assignment</p>
         </div>
 
